[workspace]
members = [
    "chaos_core",
    "chaos_scenarios",
    "chaos_metrics",
    "chaos_cli",
    "chaos_targets",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Chaos Engineering Team"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/chaos-engineering/rust-chaos-framework"

[workspace.dependencies]
# Async runtime
tokio = { version = "1.35", features = ["full"] }
tokio-util = { version = "0.7", features = ["full"] }

# Web frameworks
axum = { version = "0.7", features = ["ws", "macros"] }
hyper = { version = "1.0", features = ["full"] }
tonic = { version = "0.11", features = ["transport", "tls"] }
actix-web = "4.4"
actix-rt = "2.9"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
toml = "0.8"

# CLI
clap = { version = "4.5", features = ["derive", "cargo", "env"] }
colored = "2.1"
indicatif = { version = "0.17", features = ["rayon"] }

# Metrics and observability
prometheus = { version = "0.13", features = ["process"] }
metrics = "0.22"
metrics-exporter-prometheus = "0.13"

# Chaos primitives
libc = "0.2"
nix = { version = "0.27", features = ["signal", "process", "sched"] }
rand = { version = "0.8", features = ["std_rng"] }
rand_distr = "0.4"

# Network manipulation
pnet = "0.34"
socket2 = "0.5"

# Async utilities
futures = "0.3"
async-trait = "0.1"

# Logging and tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-appender = "0.2"

# Time and duration
chrono = { version = "0.4", features = ["serde"] }
humantime = "2.1"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# System information
sysinfo = "0.30"

# Report generation
tera = "1.19"
tabled = "0.15"

# Testing
criterion = { version = "0.5", features = ["async_tokio", "html_reports"] }
mockall = "0.12"
proptest = "1.4"
