[package]
name = "chaos_metrics"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
chaos_core = { path = "../chaos_core" }
chaos_scenarios = { path = "../chaos_scenarios" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }
prometheus = { workspace = true }
metrics = { workspace = true }
metrics-exporter-prometheus = { workspace = true }
tera = { workspace = true }
tabled = { workspace = true }
colored = { workspace = true }

[dev-dependencies]
tokio-test = "0.4"
