[package]
name = "chaos_scenarios"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
chaos_core = { path = "../chaos_core" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
toml = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
rand = { workspace = true }
chrono = { workspace = true }
humantime = { workspace = true }
async-trait = { workspace = true }

[dev-dependencies]
tokio-test = "0.4"
